--- a/HISTORY.texi
+++ b/HISTORY.texi
@@ -21,6 +21,8 @@
 
 @table @asis
 
+@item 2011/10/19
+Remove Lf between outputs of grep mode when not default and multiple regex in asubst, V13.0
 @item 2011/10/18
 Add support of mouse in sokoban menu
 @item 2011/10/11
