--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,6 +3,8 @@ HISTORY
 Main changes
 
 [horizontal]
+*2011/12/30*:: Chg major documentations into txt format for asciidoc
+
 *2011/11/28*:: Add normalization of reals
 
 *2011/10/31*:: Big change: Con_Io provides objects Console and Window
