Allow retrieving unparsed entities after parsing with callback Add xml_checker documentation

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,6 +3,9 @@ HISTORY
 Main changes
 
 [horizontal]
+*2011/12/30*:: Add Allow retrieving unparsed entities after parsing with callback in Xml_Parser V27.0,
+Xml_Parser.Generator V9.2 and xml_checker V15.2
+
 *2011/12/30*:: Chg major documentations into txt format for asciidoc
 
 *2011/11/28*:: Add normalization of reals
